style: added the begining of pokedex page styling

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,17 +1,13 @@
 <header>
-  <h2>Pokemon page</h2>
   
-    <ul class="nav navbar-nav">
-        <li>
-        <a routerLink="">Login</a>
-        </li>
-        <li>
-        <a routerLink="trainer">Trainer</a>
-        </li>
-        <li>
-        <a routerLink="pokedex">Pokedex</a>
-        </li>
-  </ul>
+  <nav className="navbar navbar-dark bg-dark">
+    <div className="container">
+      <ul className="navItems">
+       
+      </ul>
+      <h1 className="navBarTitle">Pokemon Page</h1>
+    </div>
+  </nav>
 </header>
 
 <main>
@@ -19,4 +15,4 @@
   <router-outlet></router-outlet>
 </main>
 
-<footer>The footer</footer>
+<footer>the footer</footer>
