feat: Initial header

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,17 @@
 <header>
-  
-  <nav className="navbar navbar-dark bg-dark">
-    <div className="container">
-      <ul className="navItems">
-       
-      </ul>
-      <h1 className="navBarTitle">Pokemon Page</h1>
-    </div>
+  <img id="pokemon-logo" src="../../assets/images/PokemonLogo.png">
+  <div class="header-nav">
+    <nav class="header-nav">
+      <div class="catalogue">
+          <a href=""><img src="../../assets/images/PokeBag.png"></a>
+          <p>Catalogue</p>
+      </div>
+      <div class="pokedex">
+          <a href=""><img src="../../assets/images/Pikachu.png"></a>
+          <p>Pokémons</p>
+      </div>
   </nav>
+  </div>
 </header>
 
 <main>
