--- a/src/app/components/pokemon-card/pokemon-card.component.html
+++ b/src/app/components/pokemon-card/pokemon-card.component.html
@@ -1,10 +1,12 @@
 <section #cardContainer class="cardContainer">
     <div class="cardFront">
         <button class="btn btn-primary" (click)="onFrontButtonClick()"></button>
-        <img draggable="false" class="cardImg" [src]="data.image" alt="assets/images/MissingNo.png" />
+        <div class="cardImageContainer">
+            <img #cardImg draggable="false" class="cardImg" [src]="data.image" alt="assets/images/MissingNo.png" [class.animate]="animateImage" (animationend)="onAnimationEndImage()" />
+        </div>
         <h4 class="pokemonNameCard">{{ data.name }}</h4>
-        <button class="pokeBallButton" (click)="catchPokemon()" (animationend)="onAnimationEnd()"
-            [class.animate]="animateButton"></button>
+        <button #pokeBallButton class="pokeBallButton" (click)="catchPokemon()" (animationend)="onAnimationEnd($event)"
+            [class.animate]="animateButton"><div [class.animate]="animateDot" class="pokeBallDot"></div></button>
     </div>
     <div class="cardBack">
         <button class="btn btn-primary" (click)="onBackButtonClick()"></button>
