feat: added service to pull info from pokeapi and processed the data we got from the pokemon api

--- a/src/app/components/pokemon-card-list/pokemon-card-list.component.html
+++ b/src/app/components/pokemon-card-list/pokemon-card-list.component.html
@@ -1,37 +1,6 @@
 <div id="cardContainer" class="container">
     <div class="row">
-        <div class="grid">
-            <app-pokemon-card></app-pokemon-card>
-            <app-pokemon-card></app-pokemon-card>
-            <app-pokemon-card></app-pokemon-card>
-            <app-pokemon-card></app-pokemon-card>
-            <app-pokemon-card></app-pokemon-card>
-            <app-pokemon-card></app-pokemon-card>
-            <app-pokemon-card></app-pokemon-card>
-            <app-pokemon-card></app-pokemon-card>
-            <app-pokemon-card></app-pokemon-card>
-            <app-pokemon-card></app-pokemon-card>
-            <app-pokemon-card></app-pokemon-card>
-            <app-pokemon-card></app-pokemon-card>
-            <app-pokemon-card></app-pokemon-card>
-            <app-pokemon-card></app-pokemon-card>
-            <app-pokemon-card></app-pokemon-card>
-            <app-pokemon-card></app-pokemon-card>
-            <app-pokemon-card></app-pokemon-card>
-            <app-pokemon-card></app-pokemon-card>
-            <app-pokemon-card></app-pokemon-card>
-            <app-pokemon-card></app-pokemon-card>
-            <app-pokemon-card></app-pokemon-card>
-            <app-pokemon-card></app-pokemon-card>
-            <app-pokemon-card></app-pokemon-card>
-            <app-pokemon-card></app-pokemon-card>
-            <app-pokemon-card></app-pokemon-card>
-            <app-pokemon-card></app-pokemon-card>
-            <app-pokemon-card></app-pokemon-card>
-            <app-pokemon-card></app-pokemon-card>
-            <app-pokemon-card></app-pokemon-card>
-            <app-pokemon-card></app-pokemon-card>
-            <app-pokemon-card></app-pokemon-card>
+        <div ngFor="let pokemon of pokemonData" class="grid">
 
         </div>
     </div>
