--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -7,6 +7,7 @@ header {
     left: 0;
     right: 0;
     height: 6rem;
+    // border-bottom: 0.75 solid rgba(255, 255, 255, 0.4);
 }
 
 div.header-nav {
