--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -7,7 +7,9 @@ header {
     left: 0;
     right: 0;
     height: 6rem;
-    // border-bottom: 0.75 solid rgba(255, 255, 255, 0.4);
+    width: 100%;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.4);
+    padding: 1rem 0;
 }
 
 div.header-nav {
@@ -25,7 +27,7 @@ nav.header-nav {
     height: 85px;
 }
 
-div.catalogue, div.pokedex {
+div.catalogue, div.trainer {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -44,7 +46,7 @@ div.catalogue, div.pokedex {
 .catalogue a {
 }
 
-.pokedex a {
+.trainer a {
 }
 
 nav.header-nav p {
