--- a/src/styles.scss
+++ b/src/styles.scss
@@ -19,5 +19,8 @@ html {
 body {
     font-family: 'Fira-sans';
     min-height: 100%;
-    background: linear-gradient(to bottom, #01003D, #825C9A)
+    // background: linear-gradient(to bottom, #01003D, #825C9A)
+    background: linear-gradient(217deg, rgb(19, 81, 109), rgba(255,0,0,0) 70.71%),
+                linear-gradient(127deg, rgba(1, 0, 61, 1), rgba(0,255,0,0) 70.71%),            
+                linear-gradient(336deg, rgba(130, 92, 154, 1), rgba(0,0,255,0) 70.71%);
 }
