--- a/src/app/components/pokemon-card/pokemon-card.component.html
+++ b/src/app/components/pokemon-card/pokemon-card.component.html
@@ -4,7 +4,7 @@
             <img #cardImg draggable="false" class="card-image" [src]="data.sprite" alt="assets/images/MissingNo.png" [class.animate]="animateImage" (animationend)="onAnimationEndImage()" />
         </div>
         <h4 class="pokemon-name-card">{{ data.name }}</h4>
-        <button #pokeBallButton class="poke-ball-button" (click)="catchPokemon()" (animationend)="onAnimationEnd($event)"
+        <button #pokeBallButton class="poke-ball-button" (mouseover)="canFlip=false" (mouseout)="canFlip=true" (click)="catchPokemon()" (animationend)="onAnimationEnd($event)"
             [class.animate]="animateButton"><div [class.animate]="animateDot" class="pokeBallDot"></div></button>
     </div>
     <div class="card card-back" (click)="onBackButtonClick()">
