feat: poke details elements

--- a/src/app/components/pokemon-card/pokemon-card.component.html
+++ b/src/app/components/pokemon-card/pokemon-card.component.html
@@ -35,10 +35,11 @@
                     </ul>
                 </div>
                 <div class="poke-type-container">
-                    <ul>
-                        <li><div ></div></li>
+                    <h5>Type</h5>
+                    <ul class="type-list">
+                        <li>Grass</li>
+                        <li>Poison</li>
                     </ul>
-
                 </div>
             </div>
         </div>
