--- a/src/app/components/pokemon-card/pokemon-card.component.scss
+++ b/src/app/components/pokemon-card/pokemon-card.component.scss
@@ -3,13 +3,16 @@
   backface-visibility: hidden;
   border-radius: 5px;
   //border-radius:5%;
+  height: 450px;
+  height: 100%;
   width: 350px;
   aspect-ratio: 7/9;
 }
-.card:hover {
+.card-container:hover {
   // box-shadow: 0 0 10px rgba(255, 255, 255, 0.5);
-  width: 360px;
+  scale: 1.1;
 }
+
 
 .card-front {
   background-color: #255786;
@@ -23,7 +26,7 @@
 
 .card-container {
   position: relative;
-  transition: transform 0.5s ease;
+  transition: transform 0.5s ease, scale 0.6s ease;
   height: 450px;
   display: flex;
   justify-content: center;
@@ -178,7 +181,7 @@
   position: relative;
   left: 21%;
   top: 0%;
-  height: 395px;
+  height: 400px;
   width: 200px;
   overflow: hidden;
 }
