feat: card back

--- a/src/app/components/pokemon-card/pokemon-card.component.html
+++ b/src/app/components/pokemon-card/pokemon-card.component.html
@@ -40,10 +40,8 @@
                 </div>
                 <div class="poke-type-container">
                     <h5>Type</h5>
-                    <ul class="type-list">
-                        <li><span>Grass</span></li>
-                        <li><span>Poison</span></li>
-                    </ul>
+                    <img src="/assets/images/types/grass.png">
+                    <img src="/assets/images/types/poison.png">
                 </div>
             </div>
         </div>
