--- a/src/app/components/pokemon-card-list/pokemon-card-list.component.scss
+++ b/src/app/components/pokemon-card-list/pokemon-card-list.component.scss
@@ -3,7 +3,7 @@
 .grid {
     padding-top: 50px;
     padding-bottom: 50px;
-    margin-bottom: 50px;
+    margin: 50px 0;
     background-color: rgba(0, 0, 0, 0.5);
     border-radius: 20px;
     display: grid;
