--- a/src/app/components/pokemon-card/pokemon-card.component.scss
+++ b/src/app/components/pokemon-card/pokemon-card.component.scss
@@ -1,3 +1,32 @@
+.card-container {
+  position: relative;
+  transition: transform 0.5s ease, scale 0.6s ease;
+  height: 450px;
+  display: flex;
+  justify-content: center;
+  transform-style: preserve-3d;
+
+        // type colors:
+        --bug-type-color: #3B9950;
+        --dark-type-color: #5A5979;
+        --dragon-type-color: #61CADB;
+        --electric-type-color: #FBFB72;
+        --fairy-type-color: #EA1369;
+        --fighting-type-color: #EF6138;
+        --fire-type-color: #FD4C5A;
+        --flying-type-color: #93B2C7;
+        --ghost-type-color: #906790;
+        --grass-type-color: #29CA4F;
+        --ground-type-color: #A9702C;
+        --ice-type-color: #86D2F5;
+        --normal-type-color: #CC97A7;
+        --poison-type-color: #9B69D9;
+        --psychic-type-color: #F81C91;
+        --rock-type-color: #8B3E21;
+        --steel-type-color: #42BD94;
+        --water-type-color: #86A8FC;
+}
+
 .card {
   position: absolute;
   backface-visibility: hidden;
@@ -29,15 +58,6 @@
 
 .card-back > * {
   // position: relative;
-}
-
-.card-container {
-  position: relative;
-  transition: transform 0.5s ease, scale 0.6s ease;
-  height: 450px;
-  display: flex;
-  justify-content: center;
-  transform-style: preserve-3d;
 }
 
 .btn {
@@ -84,14 +104,22 @@
   left: 39%;
 }
 
+// Poke card back
+.card-back {
+
+}
+
 #poke-details-img-background {
   height: 40%;
   width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
-  background: linear-gradient();
+
+    background: linear-gradient(to bottom right, var(--grass-type-color), var(--poison-type-color));
 }
+
+
 
 #poke-details-container {
   display: flex;
@@ -107,7 +135,6 @@
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
-  padding: 10px 0;
 }
 
 // first row
@@ -119,6 +146,7 @@
 #poke-details-first-row {
   width: 80%;
   border-bottom: 1px solid black;
+  padding: 10px 0;
 }
 
 #poke-details-first-row div {
@@ -141,6 +169,7 @@
 
 #poke-details-second-row {
   width: 80%;
+  padding: 20px 0;
 }
 
 #poke-details-second-row h5 {
@@ -148,8 +177,9 @@
   font-size: 1.2em;
 }
 
-#poke-details-second-row p, .poke-type-container li span {
+#poke-details-second-row li{
   font-size: 0.8em;
+  text-align: center;
 }
 
 .poke-abilities-container ul{
@@ -157,8 +187,8 @@
   padding: 0;
 }
 
-.poke-type-container ul {
-  list-style: none;
+.poke-type-container img {
+  width: 40px;
 }
 
 // .poke-type-container li::before {
