feat: new navigation logos

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,13 +5,13 @@
       <div class="catalogue">
         <!-- routerLinkActive="active" ariaCurrentWhenActive="page" -->
           <a routerLink="/pokedex" routerLinkActive="active" ariaCurrentWhenActive="page">
-            <img src="../../assets/images/PokeBag.png">
+            <img src="../../assets/images/PokemonsLogo.png">
           </a>
           <p>Catalogue</p>
       </div>
       <div class="trainer">
           <a routerLink="/trainer">
-            <img src="../../assets/images/Pikachu.png">
+            <img src="../../assets/images/PokeballLogo.png">
           </a>
           <p>Pokémons</p>
       </div>
