--- a/src/app/components/pokemon-card/pokemon-card.component.html
+++ b/src/app/components/pokemon-card/pokemon-card.component.html
@@ -15,7 +15,7 @@
         </div>
         
         <div id="poke-details-container">
-            <h4 id="poke-details-name">Bulbasaur</h4>
+            <h4 id="poke-details-name">{{ data.name }}</h4>
             <div id="poke-details-first-row">
                 <div class="poke-weight-container">
                     <p>31.29kg</p>
