feat: added beginning of pagination

--- a/src/app/components/pokemon-card-list/pokemon-card-list.component.html
+++ b/src/app/components/pokemon-card-list/pokemon-card-list.component.html
@@ -1,7 +1,12 @@
-<div id="cardContainer" class="container">
+<div id="cardContainer" class="align-content-center">
     <div class="row">
         <div ngFor="let pokemon of pokemonData" class="grid">
             <app-pokemon-card *ngFor="let pokemon of pokemonData"  [data]="pokemon" ></app-pokemon-card>
         </div>
     </div>
 </div>
+<app-pagination
+[currentPage]="currentPage"
+[totalPages]="totalPages"
+(pageChanged)="onPageChanged($event)"
+ ></app-pagination>
