--- a/src/app/components/pokemon-card-list/pokemon-card-list.component.scss
+++ b/src/app/components/pokemon-card-list/pokemon-card-list.component.scss
@@ -1,8 +1,7 @@
 
 
 .grid {
-    padding-top: 50px;
-    padding-bottom: 50px;
+    padding: 3%;
     margin-bottom: 50px;
     background-color: rgba(0, 0, 0, 0.5);
     border-radius: 20px;
@@ -10,3 +9,12 @@
     grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
     grid-gap: 50px;
  }
+ .row {
+    margin-left: 5%;
+    margin-right: 5%;
+ }
+
+ #cardContainer{
+ }
+
+
