feat: navigation and pagination styles

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,40 +2,46 @@
 
 header {
     display: flex;
-    justify-content: flex-start;
-    top: 0;
-    left: 0;
-    right: 0;
     height: 10rem;
     width: 100%;
     border-bottom: 1px solid rgba(255, 255, 255, 0.4);
-    padding: 1rem 0;
-}
-
-div.header-nav {
-    float: right; /* Funkar ej :( */
+    padding: 10px 10%;
+    padding-bottom: 20px;
 }
 
 nav.header-nav {
     display: flex;
     align-items: center;
-    float: right;
     height: 100%;
+    justify-self: end;
+    margin-left: auto;
 }
 
 #logo {
     height: 85px;
 }
 
-div.catalogue, div.trainer {
+a.trainer, a.catalogue {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
+div.catalogue:hover p, div.trainer:hover p {
+    color: rgb(170, 170, 170);
+}
+
+div.catalogue:hover img, div.trainer:hover img {
+    scale: 1.1;
+    -webkit-filter: drop-shadow(2px 2px 2px rgba(0, 0, 0, 0.5));
+    filter: drop-shadow(2px 2px 2px rgba(0, 0, 0, 0.5));
+}
+
 .header-nav a {
     display: flex;
-    // justify-content: center;
+    margin: 5px;
+    padding: 0 1.5rem;
+    text-decoration: none;
 }
 
 .header-nav img {
@@ -43,13 +49,8 @@ div.catalogue, div.trainer {
     width: auto;
 }
 
-.catalogue a {
-}
-
-.trainer a {
-}
-
 nav.header-nav p {
     color: white;
     margin: 0;
+    font-size: 1.5rem;
 }
