--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,22 +1,23 @@
 <header>
   <img id="pokemon-logo" src="../../assets/images/PokemonLogo.png">
-  <div class="header-nav">
+  <!-- <div class="header-nav"> -->
     <nav class="header-nav">
       <div class="catalogue">
         <!-- routerLinkActive="active" ariaCurrentWhenActive="page" -->
-          <a routerLink="/pokedex" routerLinkActive="active" ariaCurrentWhenActive="page">
+          <a class="catalogue" routerLink="/pokedex" routerLinkActive="active" ariaCurrentWhenActive="page">
             <img src="../../assets/images/PokemonsLogo.png">
+            <p>Catalogue</p>
           </a>
-          <p>Catalogue</p>
       </div>
       <div class="trainer">
-          <a routerLink="/trainer">
+          <a class="trainer" routerLink="/trainer">
             <img src="../../assets/images/PokeballLogo.png">
+            <p>Pokémons</p>
           </a>
-          <p>Pokémons</p>
+          
       </div>
-  </nav>
-  </div>
+    </nav>
+  <!-- </div> -->
 </header>
 
 <main>
