--- a/src/app/components/pagination/pagination.component.html
+++ b/src/app/components/pagination/pagination.component.html
@@ -1,6 +1,6 @@
-<div class="container">
-    <button (click)="goToPage(1)" [disabled]="currentPage === 1">First</button>
-    <button (click)="goToPage(currentPage - 1)" [disabled]="currentPage === 1">Previous</button>
-    <button (click)="goToPage(currentPage + 1)" [disabled]="currentPage === totalPages">Next</button>
-    <button (click)="goToPage(totalPages)" [disabled]="currentPage === totalPages">Last</button>
+<div class="pagination-container">
+    <button id="first-button" class="pagination-button" (click)="goToPage(1)" [disabled]="currentPage === 1"><img src='../../../assets/images/RightDoubleArrows.png' alt="First"></button>
+    <button id="previous-button" class="pagination-button" (click)="goToPage(currentPage - 1)" [disabled]="currentPage === 1"><img src='../../../assets/images/RightArrow.png' alt="Previous"></button>
+    <button id="next-button" class="pagination-button" (click)="goToPage(currentPage + 1)" [disabled]="currentPage === totalPages"><img src='../../../assets/images/RightArrow.png' alt="Next"></button>
+    <button id="last-button" class="pagination-button" (click)="goToPage(totalPages)" [disabled]="currentPage === totalPages"><img src='../../../assets/images/RightDoubleArrows.png' alt="Last"></button>
   </div>
