--- a/src/app/components/pokemon-card-list/pokemon-card-list.component.scss
+++ b/src/app/components/pokemon-card-list/pokemon-card-list.component.scss
@@ -1,10 +1,9 @@
 
-
 .grid {
     padding: 3%;
-    margin-bottom: 50px;
-    background-color: rgba(0, 0, 0, 0.5);
-    border-radius: 20px;
+    margin-bottom: 20px;
+    //background-color: rgba(0, 0, 0, 0.5);
+    //border-radius: 20px;
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
     grid-gap: 50px;
@@ -13,8 +12,4 @@
     margin-left: 5%;
     margin-right: 5%;
  }
-
- #cardContainer{
- }
-
 
