feat: new style on login form

--- a/src/app/components/login-form/login-form.component.html
+++ b/src/app/components/login-form/login-form.component.html
@@ -5,7 +5,7 @@
     class="login"
   >
     <h3>Welcome!</h3>
-    <p>Enter your trainer name:</p>
+    <!-- <p>Enter your trainer name:</p> -->
     <div>
       <img src="../../assets/images/PokeballLoginEnter.png" />
       <input
