--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -7,6 +7,7 @@ header {
     border-bottom: 1px solid rgba(255, 255, 255, 0.4);
     padding: 10px 10%;
     padding-bottom: 20px;
+    margin-bottom: 60px;
 }
 
 nav.header-nav {
