--- a/src/app/components/login-form/login-form.component.scss
+++ b/src/app/components/login-form/login-form.component.scss
@@ -4,10 +4,12 @@
 }
 
 div.login-form-background {
-    background-image: url('../../../assets/images/LoginBackground.jpg');
-    background-size: 100%;
-    width: 900px;
-    height: 800px;
+    //background-image: url('../../../assets/images/LoginBackground.jpg');
+    background-image: url('../../../assets/images/pngwing.com.png');
+    background-size: 1000px;
+    background-repeat: no-repeat;
+    width: 1000px;
+    height: 1000px;
     border-radius: 20px;
     margin: 10rem auto;
     display: flex;
@@ -18,8 +20,9 @@ div.login-form-background {
 form.login {
     background-color: rgba(255, 255, 255, 0.9);
     width: 670px;
-    height: 450px;
-    border-radius: 10px;
+    height: 350px;
+    border-radius: 50px;
+    box-shadow: 5px 10px 20px rgba(0, 0, 0, 0.3);
 
     display: flex;
     flex-direction: column;
@@ -50,8 +53,15 @@ form.login input, form.login button {
 }
 
 form.login input {
+    margin-bottom: 0;
+}
+
+form.login input {
     border: 1px solid #58B9EF;
-    padding-left: 50px;
+}
+
+form.login input:focus {
+    border: 2px solid #58B9EF;
 }
 
 form.login button {
@@ -65,3 +75,11 @@ form.login button:hover {
     border: 1px solid var(--light-blue);
 }
 
+.login-form-error {
+    //text-align: center;
+    color: gray;
+}
+
+form.login input, .login-form-error {
+    padding-left: 50px;
+}
