Fix: fixed bug with weight and height displaying incorrectly

--- a/src/app/components/pokemon-card/pokemon-card.component.scss
+++ b/src/app/components/pokemon-card/pokemon-card.component.scss
@@ -75,6 +75,7 @@
 .card-back {
   transform: rotateY(180deg);
   background-color: #FFFBEB;
+  user-select: none;
 }
 
 .btn {
@@ -210,6 +211,9 @@
   width: 40px;
 }
 
+.pointer {
+  cursor: pointer;
+}
 // .poke-type-container li::before {
 //   content: "•";
 //   color: red;
